_sass/_base.scss
* {
    margin: 0;
    padding: 0;
}

html {
	background-color:  $background-color;
}

html, body {
	height: 100%;
}

body {
	color: white;
	font-family: 'PT Sans', sans-serif;
	font-size: 14px;

	background: url('https://s3.amazonaws.com/ajvarshneya/lake-rain.jpg') no-repeat top center;
	background-color: white;
	background-size: cover;
}

a, a:visited, a:active, a:focus {
	color: $accent-color;
	text-decoration: none;
	outline: none;
}

.invert-link-color {
	a, a:visited, a:active, a:focus {
		color: white;
	}
	a:hover {
	  color: $accent-color;
	}
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}

.title {
	font-family: 'Open Sans', sans-serif;
	font-weight: 500;
}

.link-title {
	color: black;
}

/* Header: name/nav styling */
.inline-list {
  list-style: none;
  font-weight: 700;
  margin: 30px 0 0 0;
  // padding: 30px 0;
  li {
    display: inline-block;
    padding: 0 10px 5px 10px;
  }
}

.name-container {
  padding: 30px 0 0 0;
  text-align: center;

  .name {
    font-size: 48px;
    letter-spacing: 15px;
    text-transform: uppercase;
  }
}

@include media-query($on-tablet) {
  .name-container {
    .name {
      font-size: 36px;
      letter-spacing: 10px;
    }
    .inline-list {
      font-size: 14px;
    }
  }
}

@include media-query($on-phone) {
  .name-container {
    .name {
      font-size: 20px;
      letter-spacing: 10px;
    }
  }
}

